Adding new booking component

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -69,7 +69,7 @@
                   <i class="icon fa fa-dashboard" aria-hidden="true"></i>Cargo Dashboard
                 </a>
               </li>
-              <li class="waves-effect waves-light" *ngIf="canAccessModule('cargodashboard')">
+              <li class="waves-effect waves-light">
                 <a class="treeView-item" [routerLink]="['newBooking']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-plus-square-o" aria-hidden="true"></i>New Booking
                 </a>
