operator accounts added

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -173,7 +173,7 @@
             </a>
           </li>
           <li class="waves-effect waves-light"  [hidden] ="!currentUserDetails.superAdmin">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['operatorAccounts']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Operator Accounts
             </a>
           </li>
