--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1334,6 +1334,7 @@ li.tab.active a {
     -webkit-transition: margin-left 0.3s ease;
     -o-transition: margin-left 0.3s ease;
     transition: margin-left 0.3s ease;
+    font-family: auto;
 }
 
 .app-title {
@@ -1738,7 +1739,8 @@ table.dataTable {
 
 .table thead th {
     cursor: pointer;
-    border: 2px solid #dee2e6 !important;
+    border: 1px solid #dee2e6 !important;
+    background-color: #f5f5f5;
 }
 
 .table thead th > .fa-sort-asc {
