branchOffice and cities added

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -153,12 +153,12 @@
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('branchoffices')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['branchOffices']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Branch Offices
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('cities')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['cities']" [routerLinkActive]="['active']">
               <i class="icon fa fa-map-marker" aria-hidden="true"></i>Cities
             </a>
           </li>
