--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,1 +1,7 @@
-<p>spinner works!</p>
+<div class="" [hidden]="!loading">
+    <div class="loader">
+        <div id="loader-wrapper">
+            <i class="fa fa-spinner fa-2x"></i>
+        </div>
+    </div>
+</div>
