--- a/src/app/main/layout/features/operator-accounts/add-edit-operator-accounts/add-edit-operator-accounts.component.html
+++ b/src/app/main/layout/features/operator-accounts/add-edit-operator-accounts/add-edit-operator-accounts.component.html
@@ -127,9 +127,9 @@
                     <div class="col-12 text-center">
                         <p class="error-field">{{errorMessage}}</p>
                     </div>
-                    <div class="col-sm-12 text-right">
+                    <div class="col-sm-12 text-right p-0">
                         <button type="button" class="btn btn-success btn-sm mr-2" (click)="save()">
-                            <i class="fa fa-fw fa-check-circle"></i> Save
+                            <i class="fa fa-fw fa-check-circle"></i> {{operatorId ? 'Update' : 'Save'}}
                         </button>
                         <button type="button" class="btn btn-danger btn-sm" (click)="close()">
                             <i class="fa fa-fw fa-times-circle"></i> Cancel
