--- a/src/app/main/layout/features/operator-accounts/operator-accounts.component.html
+++ b/src/app/main/layout/features/operator-accounts/operator-accounts.component.html
@@ -15,10 +15,10 @@
         <div class="col-lg-12 col-md-12">
             <div class="tile">
                 <div class="tile-body">
-                    <div class="text-right mb-2">
+                    <div class="text-right mb-3">
                         <a [routerLink]="['addOperatorAccount']" class="btn btn-sm btn-success">Add Account</a>
                     </div>
-                    <table class="table table-hover text-center">
+                    <table class="table table-hover text-center dataTable">
                         <thead>
                         <tr>
                             <th>S No</th>
