--- a/src/app/main/layout/features/cities/cities.component.html
+++ b/src/app/main/layout/features/cities/cities.component.html
@@ -132,10 +132,10 @@
         </form>
     </div>
     <div class="modal-footer">
-        <div class="col-12 text-center p-0">
+        <div class="col-12 text-center">
             <p class="error-field">{{errorMessage}}</p>
         </div>
-        <div class="col-sm-12 text-right">
+        <div class="col-sm-12 text-right p-0">
             <button type="button" class="btn btn-success btn-sm mr-2" (click)="save()">
                 <i class="fa fa-fw fa-check-circle"></i> {{cityId ? 'Update' : 'Save'}}
             </button>
