--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -178,8 +178,8 @@
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('roles')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
-              <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Roles
+            <a class="treeView-item" [routerLink]="['roles']" [routerLinkActive]="['active']">
+              <i class="icon fa fa-user-circle" aria-hidden="true"></i>Roles
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('manageRoles')">
