user component added

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -183,17 +183,17 @@
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('manageRoles')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['manageRoles']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Manage Roles
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('users')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['users']" [routerLinkActive]="['active']">
               <i class="icon fa fa-users" aria-hidden="true"></i>Users
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('vehicles')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['vehicles']" [routerLinkActive]="['active']">
               <i class="icon fa fa-bus" aria-hidden="true"></i>Vehicles
             </a>
           </li>
