--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -143,7 +143,7 @@
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('amenities')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['amenities']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Amenities
             </a>
           </li>
