manage roles added

--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -184,7 +184,7 @@
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('manageRoles')">
             <a class="treeView-item" [routerLink]="['manageRoles']" [routerLinkActive]="['active']">
-              <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Manage Roles
+              <i class="icon fa fa-id-badge" aria-hidden="true"></i>Manage Roles
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('users')">
