--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -138,7 +138,7 @@
         </a>
         <ul class="treeView-menu">
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('agents')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['agents']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Agents
             </a>
           </li>
