--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -293,7 +293,7 @@
             </a>
           </li>
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('payments')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['payments']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Payments
             </a>
           </li>
