--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -147,11 +147,11 @@
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Amenities
             </a>
           </li>
-          <li class="waves-effect waves-light"  *ngIf="canAccessModule('banks')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
-              <i class="icon fa fa-university" aria-hidden="true"></i>Banks
-            </a>
-          </li>
+<!--          <li class="waves-effect waves-light"  *ngIf="canAccessModule('banks')">-->
+<!--            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">-->
+<!--              <i class="icon fa fa-university" aria-hidden="true"></i>Banks-->
+<!--            </a>-->
+<!--          </li>-->
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('branchoffices')">
             <a class="treeView-item" [routerLink]="['branchOffices']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Branch Offices
@@ -162,11 +162,11 @@
               <i class="icon fa fa-map-marker" aria-hidden="true"></i>Cities
             </a>
           </li>
-          <li class="waves-effect waves-light"  *ngIf="canAccessModule('GSTFilters')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
-              <i class="icon fa fa-search" aria-hidden="true"></i>GST Filters
-            </a>
-          </li>
+<!--          <li class="waves-effect waves-light"  *ngIf="canAccessModule('GSTFilters')">-->
+<!--            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">-->
+<!--              <i class="icon fa fa-search" aria-hidden="true"></i>GST Filters-->
+<!--            </a>-->
+<!--          </li>-->
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('suppliers')">
             <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Suppliers
