--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -43,7 +43,7 @@ table.tree-grid {
 body {
     /*font-size: 0.872rem !important;*/
     font-size: 0.8rem !important;
-    font-family: 'Lato', sans-serif !important;
+    font-family: 'Roboto', sans-serif !important;
     background-color: #e8eff9 !important;
 }
 
@@ -82,12 +82,23 @@ body {
 }
 
 #loader-wrapper {
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*z-index: 10000;*/
     position: fixed;
     top: 0;
-    left: 0;
+    text-align: center;
     width: 100%;
+    margin: 0;
     height: 100%;
-    z-index: 10000;
+    background-color: rgba(0, 0, 0, 0.48);
+    z-index: 1000000;
+    padding: 0;
+    color: #fff;
+    font-size: 30px;
 }
 
 #loader-img {
@@ -1334,7 +1345,6 @@ li.tab.active a {
     -webkit-transition: margin-left 0.3s ease;
     -o-transition: margin-left 0.3s ease;
     transition: margin-left 0.3s ease;
-    font-family: auto;
 }
 
 .app-title {
@@ -4252,7 +4262,6 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
 }
 .customObj code{
     font-size: 100%;
-    font-family: system-ui;
 }
 .hasRental {
     padding: 20px;
@@ -4265,15 +4274,10 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
     font-size: 15px;
     color: #fff;
     font-weight: 600;
-    font-family: auto;
     padding-left: 25px;
 }
-.modal-content {
-    font-family: auto;
-}
-.swal2-container.swal2-center>.swal2-popup {
-    font-family: auto;
-}
+.modal-content {}
+.swal2-container.swal2-center>.swal2-popup {}
 .state-tax{
     padding: 10px;
     border: 1px solid #ccc;
