--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -1,7 +1,8 @@
 <div class="" [hidden]="!loading">
 <!--    <div class="loader">-->
         <div id="loader-wrapper">
-            <i class="fa fa-spinner fa-2x" style="position: relative; top: 50%;"></i>
+<!--            <i class="fa fa-spinner fa-2x" style="position: relative; top: 50%;"></i>-->
+            <img src="">
         </div>
 <!--    </div>-->
 </div>
