--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -168,7 +168,7 @@
 <!--            </a>-->
 <!--          </li>-->
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('suppliers')">
-            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['suppliers']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Suppliers
             </a>
           </li>
