--- a/src/app/main/layout/features/suppliers/suppliers.component.html
+++ b/src/app/main/layout/features/suppliers/suppliers.component.html
@@ -20,13 +20,13 @@
                             <div class="col-sm-6"></div>
                             <div class="col-sm-6 p-0">
                                 <div class="pull-right mb-3">
-                                    <button class="btn btn-info btn-sm btn-all-shadow waves-effect waves-light"
+                                    <button class="btn btn-sm btn-success"
                                             (click)= "addSupplier(addEditSupplierModal)">
                                         <span class="glyphicon glyphicon-plus"></span>
                                         Add Supplier
                                     </button>&nbsp;&nbsp;
                                     <div class="upload-btn-wrapper">
-                                        <button type="button" class="btn btn-sm btn-success " style="margin-top: 17px; margin-bottom: 17px" (click)="exportingToExcelInSuppliers()"> Export to Excel </button>
+                                        <button type="button" class="btn btn-sm btn-success" style="margin-top: 17px; margin-bottom: 17px" (click)="exportingToExcelInSuppliers()"> Export to Excel </button>
                                     </div>
                                 </div>
                             </div>
