--- a/src/app/spinner/spinner.component.html
+++ b/src/app/spinner/spinner.component.html
@@ -2,7 +2,7 @@
 <!--    <div class="loader">-->
         <div id="loader-wrapper">
 <!--            <i class="fa fa-spinner fa-2x" style="position: relative; top: 50%;"></i>-->
-            <img src="">
+            <img src="./assets/images/Spinner.svg" style="position: relative; top: 40%;" alt="Loader">
         </div>
 <!--    </div>-->
 </div>
