--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -95,11 +95,8 @@ body {
     width: 100%;
     margin: 0;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.48);
+    background-color: rgb(0 0 0 / 24%);
     z-index: 1000000;
-    padding: 0;
-    color: #fff;
-    font-size: 30px;
 }
 
 #loader-img {
@@ -4285,4 +4282,12 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
     border-radius: 10px;
     margin: 10px 20px;
     width: 100%;
+}
+.cargo-search {
+    padding: 15px;
+    border-bottom: 1px solid #ccc;
+}
+.cargoDetails label{
+    color: #000000;
+    font-weight: 300;
 }
