--- a/src/app/main/layout/cargo/branch-booking-summary/branch-booking-summary.component.html
+++ b/src/app/main/layout/cargo/branch-booking-summary/branch-booking-summary.component.html
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-3 col-12 form-group m-auto">
+                            <div class="col-sm-3 col-12 form-group mt-auto">
                                 <button type="button" class="btn btn-success btn-sm mr-2"
                                         (click)="loadBranchBookingsSummary()">Search Bookings
                                 </button>
