--- a/src/app/main/layout/cargo/cargo-look-up/cargo-look-up.component.html
+++ b/src/app/main/layout/cargo/cargo-look-up/cargo-look-up.component.html
@@ -20,7 +20,7 @@
 
 <ng-template #showCargoDataModal let-c="close" let-d="dismiss">
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Cargo Bookings!</h4>
+        <h4 class="modal-title" id="modal-basic-title">Search Results (Cargo Bookings)</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
